# zob2osh_tracker

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
.cache/clangd/index/: config.c.6C87EC71194F11B2.idx  config.h.B80FB3DC0E9D2FE3.idx  font8x8_basic.h.B0D738C672A25610.idx  gps_tracker.c.76CB7F869FFF9784.idx  gps_tracker.h.1EC787F9E2B2C18C.idx  gps_uart.c.E7D5828F5A10874C.idx  gps_uart.h.8507BA8DA283F2D0.idx  led_strip.h.4BF8AE54477DDEC4.idx  led_strip_api.c.9303C2773C5F59AF.idx  led_strip_interface.h.3AC111602D1A02FB.idx  led_strip_rmt.h.0CCC9AC5F19E4F0B.idx  led_strip_rmt_dev.c.7D865AD8E4CBDC3D.idx  led_strip_rmt_encoder.c.B0F9CE048C96F719.idx  led_strip_rmt_encoder.h.76BFA6F22D276A0E.idx  led_strip_spi.h.494684E1DA2B4274.idx  led_strip_spi_dev.c.06C5D782054A0264.idx  led_strip_types.h.3388C643C5D86425.idx  main.c.FE56950F9C94B285.idx  root_cert.c.420EFDE51F03B752.idx  screen_display.c.EAB611BF9EB47CEF.idx  screen_display.h.89C66EB139D6E454.idx  sd_logger.c.109AB735C0C28EFB.idx  sd_logger.h.56426F58C84F6863.idx  ssd1306.c.D6A979230449B137.idx  ssd1306.h.949BA34994494738.idx  (+3 more)
main/: CMakeLists.txt  config.c  config.h  main.c  sd_logger.h  zob2osh_tracker.c
main/gnss/: gps_mock.c  gps_uart.c  gps_uart.h
main/network/: wifi_manager.c  wifi_manager.h
main/screen_display/: CMakeLists.txt  screen_display.c  screen_display.h
main/sd_card/: sd_logger.c  sd_logger.h
main/ssd1306_driver/: font8x8_basic.h  ssd1306.c  ssd1306.h  ssd_1306_i2c_new.c
main/tls_cert/: root_cert.c
main/tracker/: gps_tracker.c  gps_tracker.h
